# polymarket-tracker

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  README.md  pyproject.toml
.claude/skills/polymarket-client/: SKILL.md
.lavish/: plan.html
src/btcupdown/: __init__.py  client.py  paper.py  types.py  windows.py
src/polytracker/: backfill.py  discovery.py  ingest.py  store.py
src/polytracker/tracker/: app.py
src/polytracker/tracker/static/: index.html
src/polytracker/trading/: __init__.py  __main__.py  cli.py  config.py  domain.py  execution.py  geo.py  repository.py  service.py
tests/: test_backfill.py  test_btcupdown_client.py  test_btcupdown_core.py  test_btcupdown_paper.py  test_discovery.py  test_ingest.py  test_tracker_app.py  test_trading.py
